--- a/mysite/frenin/indextest.html
+++ b/mysite/frenin/indextest.html
@@ -56,7 +56,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("/static/frenin/data.csv", function(error, data) {
+d3.csv("data.csv", function(error, data) {
   var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
 
   data.forEach(function(d) {
